another one add

--- a/animals.html
+++ b/animals.html
@@ -38,6 +38,7 @@
           Domestic dogs are mostly kept as pets,though many breads are capable
           of surviving on their own,whether it's a forest or on city streets.
         </p>
+        <p>domesticated animals hate but</p>
 
         <img
           src="./Images/dog.jpg"
